[package]
name = "fix-fs-index-save"
authors = ["dorkeline"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.12.0"
clap = { version = "4.4.6", features = ["derive"] }
lz4_flex = "0.11.1"
sha2 = "0.10.8"
